[gd_scene load_steps=2 format=3 uid="uid://bapddnfjn0egc"]

[ext_resource type="Script" uid="uid://cnjmpbykxiqpu" path="res://UI/Wands_UI/Wands Preview/wand_preview.gd" id="1_q68vg"]

[node name="Wand_Preview" type="PanelContainer"]
offset_left = 1030.0
offset_top = 156.0
offset_right = 1416.0
offset_bottom = 625.0
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 3
script = ExtResource("1_q68vg")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 15
theme_override_constants/margin_top = 15
theme_override_constants/margin_right = 15
theme_override_constants/margin_bottom = 15

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="RRTY" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "RRTY:           "

[node name="RRTY2" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "1"

[node name="HBoxContainer2" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="DMG" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "DMG_MLT:  "

[node name="DMG2" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "1"

[node name="HBoxContainer3" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="CDLY" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer3"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "CST_DLY:     "

[node name="CDLY2" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer3"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "1"

[node name="HBoxContainer4" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="RLDSPD" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer4"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "RLD_SPD:    "

[node name="RLDSPD2" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer4"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "1"

[node name="HBoxContainer5" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="SPRD" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer5"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "SPRD:           "

[node name="SPRD2" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer5"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "1"

[node name="HBoxContainer6" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="CPCTY" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer6"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "CPTY:           "

[node name="CPCTY2" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer6"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "1"

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="SPELLS" type="Label" parent="MarginContainer/VBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "SPELLS        "
